--- a/utils/tests_template/interval_profiling_kernel_name.yaml.erb
+++ b/utils/tests_template/interval_profiling_kernel_name.yaml.erb
@@ -5,18 +5,21 @@
      mulfactor = 1
      profiled_call = "clEnqueueSVMFree"
      backend = 2
+     kernel_function_name = "solver"
    when "ze"
      event = "hEvent"
      prof_end = "globalEnd"
      mulfactor = 1
      profiled_call = "zeCommandListAppendBarrier"
      backend = 1
+     kernel_function_name = "solver"
    when "cuda"
      event = "hStop"
      prof_end = "milliseconds"
      mulfactor = 1000000
-     profiled_call = "cuLaunchHostFunc"
+     profiled_call = "cuLaunchKernel"
      backend = 3
+     kernel_function_name = "solver"
    end %>
 
 in:
@@ -37,15 +40,19 @@ in:
     :class: stream_class
   :events:
   <% if be == "cuda" %>
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_entry
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_exit
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_entry
+  - :name: lttng_ust_cuda:cuCtxCreate_entry
+  - :name: lttng_ust_cuda:cuCtxCreate_exit
+  - :name: lttng_ust_cuda:cuModuleGetFunction_entry
     :payload:
-      ctx: 1
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_exit
+      name_val: <%= kernel_function_name %>
+  - :name: lttng_ust_cuda:cuModuleGetFunction_exit
+    :payload:
+      hfunc_val: 11
   <% end %>
   - :name: lttng_ust_<%= be %>:<%= profiled_call %>_entry
     :clock_snapshot_value: 0
+    :payload:
+      f: 11
   - :name: lttng_ust_<%= be %>_profiling:event_profiling
     :payload:
       <%= event %>: 12
@@ -82,15 +89,16 @@ ref:
       hostname: aurora12.gov
       backend: <%= backend %>
     :payload:
-      name: cuDevicePrimaryCtxRetain
+      name: cuCtxCreate
       dur: 1
+
   - :name: lttng:host
     :common_context:
       hostname: aurora12.gov
       backend: <%= backend %>
       ts: 2
     :payload:
-      name: cuCtxSetCurrent
+      name: cuModuleGetFunction
       dur: 1
   <% end %>
   - :name: lttng:host
@@ -109,5 +117,5 @@ ref:
       backend: 0
 <% end %>
     :payload:
-      name: <%= profiled_call %>
+      name: <%= kernel_function_name %>
       dur: <%= 10 * mulfactor %>
