--- a/utils/tests_template/interval_profiling_cuda_driver_api.yaml.erb
+++ b/utils/tests_template/interval_profiling_cuda_driver_api.yaml.erb
@@ -1,23 +1,10 @@
-<% case be
-   when "opencl"
-     event = "event"
-     prof_end = "end"
-     mulfactor = 1
-     profiled_call = "clEnqueueSVMFree"
-     backend = 2
-   when "ze"
-     event = "hEvent"
-     prof_end = "globalEnd"
-     mulfactor = 1
-     profiled_call = "zeCommandListAppendBarrier"
-     backend = 1
-   when "cuda"
-     event = "hStop"
-     prof_end = "milliseconds"
-     mulfactor = 1000000
-     profiled_call = "cuLaunchHostFunc"
-     backend = 3
-   end %>
+<% event = "hStop"
+   prof_end = "milliseconds"
+   mulfactor = 1000000
+   profiled_call = "cuLaunchHostFunc"
+   backend = 3
+   device = 123
+%>
 
 in:
   :hostname: aurora12.gov
@@ -36,14 +23,10 @@ in:
   - :name: stream0
     :class: stream_class
   :events:
-  <% if be == "cuda" %>
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_entry
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_exit
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_entry
+  - :name: lttng_ust_cuda:cuCtxCreate_entry
     :payload:
-      ctx: 1
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_exit
-  <% end %>
+      dev: <%= device %>
+  - :name: lttng_ust_cuda:cuCtxCreate_exit
   - :name: lttng_ust_<%= be %>:<%= profiled_call %>_entry
     :clock_snapshot_value: 0
   - :name: lttng_ust_<%= be %>_profiling:event_profiling
@@ -76,23 +59,13 @@ ref:
   - :name: stream0
     :class: interval_class
   :events:
-  <% if be == "cuda" %>
   - :name: lttng:host
     :common_context:
       hostname: aurora12.gov
       backend: <%= backend %>
     :payload:
-      name: cuDevicePrimaryCtxRetain
+      name: cuCtxCreate
       dur: 1
-  - :name: lttng:host
-    :common_context:
-      hostname: aurora12.gov
-      backend: <%= backend %>
-      ts: 2
-    :payload:
-      name: cuCtxSetCurrent
-      dur: 1
-  <% end %>
   - :name: lttng:host
     :common_context:
       hostname: aurora12.gov
@@ -103,11 +76,9 @@ ref:
   - :name: lttng:device
     :common_context:
       hostname: aurora12.gov
-<% if ["ze", "cuda"].include?(be) %>
       backend: <%= backend %>
-<% else %>
-      backend: 0
-<% end %>
     :payload:
       name: <%= profiled_call %>
       dur: <%= 10 * mulfactor %>
+      did: <%= device %>
+      sdid: <%= device %>
