--- a/utils/tests_template/interval_profiling_cuda_multictx.yaml.erb
+++ b/utils/tests_template/interval_profiling_cuda_multictx.yaml.erb
@@ -1,23 +1,12 @@
-<% case be
-   when "opencl"
-     event = "event"
-     prof_end = "end"
-     mulfactor = 1
-     profiled_call = "clEnqueueSVMFree"
-     backend = 2
-   when "ze"
-     event = "hEvent"
-     prof_end = "globalEnd"
-     mulfactor = 1
-     profiled_call = "zeCommandListAppendBarrier"
-     backend = 1
-   when "cuda"
-     event = "hStop"
-     prof_end = "milliseconds"
-     mulfactor = 1000000
-     profiled_call = "cuLaunchHostFunc"
-     backend = 3
-   end %>
+<% 
+   event = "hStop"
+   prof_end = "milliseconds"
+   mulfactor = 1000000
+   profiled_call = "cuLaunchHostFunc"
+   backend = 3
+   device1 = 123
+   device2 = 456
+%>
 
 in:
   :hostname: aurora12.gov
@@ -36,14 +25,27 @@ in:
   - :name: stream0
     :class: stream_class
   :events:
-  <% if be == "cuda" %>
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_entry
-  - :name: lttng_ust_cuda:cuDevicePrimaryCtxRetain_exit
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_entry
+  - :name: lttng_ust_cuda:cuCtxCreate_entry
     :payload:
-      ctx: 1
-  - :name: lttng_ust_cuda:cuCtxSetCurrent_exit
-  <% end %>
+      dev: <%= device1 %>
+  - :name: lttng_ust_cuda:cuCtxCreate_exit
+  - :name: lttng_ust_<%= be %>:<%= profiled_call %>_entry
+    :clock_snapshot_value: 0
+  - :name: lttng_ust_<%= be %>_profiling:event_profiling
+    :payload:
+      <%= event %>: 12
+  - :name: lttng_ust_<%= be %>:<%= profiled_call %>_exit
+    :clock_snapshot_value: 3
+  - :name: lttng_ust_<%= be %>_profiling:event_profiling_results
+    :payload:
+      <%= event %>: 12
+      <%= prof_end %>: 10
+  - :name: lttng_ust_cuda:cuCtxDestroy_entry
+  - :name: lttng_ust_cuda:cuCtxDestroy_exit
+  - :name: lttng_ust_cuda:cuCtxCreate_entry
+    :payload:
+      dev: <%= device2 %>
+  - :name: lttng_ust_cuda:cuCtxCreate_exit
   - :name: lttng_ust_<%= be %>:<%= profiled_call %>_entry
     :clock_snapshot_value: 0
   - :name: lttng_ust_<%= be %>_profiling:event_profiling
@@ -82,15 +84,7 @@ ref:
       hostname: aurora12.gov
       backend: <%= backend %>
     :payload:
-      name: cuDevicePrimaryCtxRetain
-      dur: 1
-  - :name: lttng:host
-    :common_context:
-      hostname: aurora12.gov
-      backend: <%= backend %>
-      ts: 2
-    :payload:
-      name: cuCtxSetCurrent
+      name: cuCtxCreate
       dur: 1
   <% end %>
   - :name: lttng:host
@@ -103,11 +97,43 @@ ref:
   - :name: lttng:device
     :common_context:
       hostname: aurora12.gov
-<% if ["ze", "cuda"].include?(be) %>
       backend: <%= backend %>
-<% else %>
-      backend: 0
-<% end %>
     :payload:
       name: <%= profiled_call %>
       dur: <%= 10 * mulfactor %>
+      did: <%= device1 %>
+      sdid: <%= device1 %>
+  <% if be == "cuda" %>
+  - :name: lttng:host
+    :common_context:
+      hostname: aurora12.gov
+      backend: <%= backend %>
+      ts: 5
+    :payload:
+      name: cuCtxDestroy
+      dur: 1
+  - :name: lttng:host
+    :common_context:
+      hostname: aurora12.gov
+      backend: <%= backend %>
+      ts: 7
+    :payload:
+      name: cuCtxCreate
+      dur: 1
+  <% end %>
+  - :name: lttng:host
+    :common_context:
+      hostname: aurora12.gov
+      backend: <%= backend %>
+    :payload:
+      name: <%= profiled_call %>
+      dur: 3
+  - :name: lttng:device
+    :common_context:
+      hostname: aurora12.gov
+      backend: <%= backend %>
+    :payload:
+      name: <%= profiled_call %>
+      dur: <%= 10 * mulfactor %>
+      did: <%= device2 %>
+      sdid: <%= device2 %>
