--- a/utils/tests_template/interval_profiling_block.yaml.erb
+++ b/utils/tests_template/interval_profiling_block.yaml.erb
@@ -74,6 +74,7 @@ ref:
   - :name: lttng:device
     :common_context:
       hostname: aurora12.gov
+      backend: <%= backend %>
     :payload:
       name: <%= profiled_call %>
       dur: <%= 10 * mulfactor %>
